k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      component: fibonnaci
  template:
    metadata:
      labels:
        component: fibonnaci
    spec:
      containers:
        - name: fib-app
          image: 763544978374.dkr.ecr.us-east-1.amazonaws.com/fibonacci:latest
          ports:
            - containerPort: 5000
