k8s/api-cluster-ipservice.yml
apiVersion: v1
kind: Service
metadata:
  # name: api-node-port-service
  name: api-cluster-ip-service
spec:
  # type: NodePort
  type: ClusterIP
  selector:
    app: fibonnaci
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
