k8s/api-node-port-service.yml
apiVersion: v1
kind: Service
metadata:
  # name: api-node-port-service
  name: api-cluster-ip-service
spec:
  # type: NodePort
  type: ClusterIP
  selector:
    component: fibonnaci
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
