k8s/ingress-service-eks.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
    name: ingress-service-eks
    annotations: 
      cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx 
  rules:
  - host: "a39d523222ffa41198f468726b5aeda8-3145e4d52c7c2572.elb.us-east-1.amazonaws.com" # your purchased domain
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: api-cluster-ip-service
              port: 
                  number: 5000
        - path: "/hello-world"
          pathType: Prefix
          backend:
            service:
              name: hello-world-service
              port: 
                  number: 8080
  tls:
  - hosts:
    - "a39d523222ffa41198f468726b5aeda8-3145e4d52c7c2572.elb.us-east-1.amazonaws.com"
    secretName: api-fibonacci-cert
